Fix spacing on left nav

--- a/frontend/src/styles/leftnav.scss
+++ b/frontend/src/styles/leftnav.scss
@@ -2,7 +2,7 @@
     align-items: center;
     min-width: 200px;
     display: grid;
-    grid-template-rows: 60px 100px 40px 1fr 1fr 200px;
+    grid-template-rows: 70px 100px 40px 365px 1fr 200px;
     height: 100vh;
     background-color:#f8f8ff;
     color:#696969;
